Pre-entrega con correcciones

--- a/pages/cambios.html
+++ b/pages/cambios.html
@@ -8,41 +8,44 @@
       content="cambios, devoluciones, CAYETANO, tienda, online"
     />
     <title>CAYETANO - Cambios</title>
-    <link rel="stylesheet" href="../css/miestilo.css" />
-    <link rel="stylesheet" href="../css/estilo-cambios.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <header id="encabezado">
       <h1>CAYETANO</h1>
+      <nav id="navegacion-principal">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="./productos.html">Productos</a></li>
+          <li><a href="./preguntas.html">Preguntas</a></li>
+          <li><a href="./cambios.html">Cambios</a></li>
+          <li><a href="./contacto.html">Contactos</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <nav id="navegacion-principal">
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="./productos.html">Productos</a></li>
-        <li><a href="./preguntas.html">Preguntas</a></li>
-        <li><a href="./cambios.html">Cambios</a></li>
-        <li><a href="./contacto.html">Contactos</a></li>
-      </ul>
-    </nav>
-
-    <section id="contenido-principal">
-      <header>
-        <h2>CAMBIOS</h2>
-      </header>
+    <main id="contenido-principal">
+      <h2>CAMBIOS</h2>
       <div class="contenido-cambios">
         <div class="imagen-cambios">
-          <img src="../resources/img-pufer-marron3.jpeg" alt="Imagen de cambios" />
+          <img
+            src="../resources/img-pufer-marron3.jpeg"
+            alt="Imagen de cambios"
+          />
         </div>
         <div class="texto-cambios">
-
           <p>
-            <strong><h2>¿CÓMO GESTIONO UN CAMBIO/DEVOLUCIÓN?</h2></strong><br />
-            Para solicitar un cambio o devolución deberán contactarse con nosotros
-            a nuestra casilla de holacayetano@gmail.com. O comunícate al WhatsApp. 
-            Nuestro horario de atención es de Lunes a Sábados de 9:00 a 18:00 hs.
+            <strong>
+              <h2>¿CÓMO GESTIONO UN CAMBIO/DEVOLUCIÓN?</h2> </strong
+            ><br />
+            Para solicitar un cambio o devolución deberán contactarse con
+            nosotros a nuestra casilla de holacayetano@gmail.com. O comunícate
+            al WhatsApp. Nuestro horario de atención es de Lunes a Sábados de
+            9:00 a 18:00 hs.
           </p>
           <p>Envianos un mensaje vía WhatsApp detallando:</p>
           <ul>
@@ -83,14 +86,20 @@
           </p>
         </div>
       </div>
-    </section>
+    </main>
 
     <footer id="pie-de-pagina">
       <h2>TU OUTFIT MAS CANCHERO</h2>
       <div class="redes-sociales">
-        <a href="https://www.instagram.com/cayetano.okk" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="mailto: holacayetano@gmail.com"><i class="far fa-envelope"></i></a>
-        <a href="https://wa.me/5492216063880" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/cayetano.okk" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto: holacayetano@gmail.com"
+          ><i class="far fa-envelope"></i
+        ></a>
+        <a href="https://wa.me/5492216063880" target="_blank"
+          ><i class="fab fa-whatsapp"></i
+        ></a>
       </div>
     </footer>
   </body>
