--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,30 +8,28 @@
       content="contacto, formulario, CAYETANO, tienda, online"
     />
     <title>CAYETANO - Contacto</title>
-    <link rel="stylesheet" href="../css/miestilo.css" />
-    <link rel="stylesheet" href="../css/estilo-contacto.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <header id="encabezado">
       <h1>CAYETANO</h1>
+      <nav id="navegacion-principal">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="./productos.html">Productos</a></li>
+          <li><a href="./preguntas.html">Preguntas</a></li>
+          <li><a href="./cambios.html">Cambios</a></li>
+          <li><a href="./contacto.html">Contactos</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <nav id="navegacion-principal">
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="./productos.html">Productos</a></li>
-        <li><a href="./preguntas.html">Preguntas</a></li>
-        <li><a href="./cambios.html">Cambios</a></li>
-        <li><a href="./contacto.html">Contactos</a></li>
-      </ul>
-    </nav>
-
-    <section id="contenido-principal">
-      <header>
-        <h2>CONTACTO</h2>
-      </header>
+    <main id="contenido-principal">
+      <h2>CONTACTO</h2>
       <div class="formulario-contacto">
         <form>
           <div class="campo-formulario">
@@ -55,14 +53,20 @@
           </div>
         </form>
       </div>
-    </section>
+    </main>
 
     <footer id="pie-de-pagina">
       <h2>GRACIAS POR DEJARNOS TU MENSAJE</h2>
       <div class="redes-sociales">
-        <a href="https://www.instagram.com/cayetano.okk" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="mailto: holacayetano@gmail.com"><i class="far fa-envelope"></i></a>
-        <a href="https://wa.me/5492216063880" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/cayetano.okk" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto: holacayetano@gmail.com"
+          ><i class="far fa-envelope"></i
+        ></a>
+        <a href="https://wa.me/5492216063880" target="_blank"
+          ><i class="fab fa-whatsapp"></i
+        ></a>
       </div>
     </footer>
   </body>
