--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,121 +1,119 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="iso-8559-1" />
+    <meta name="description" content="CAYETANO" />
+    <meta
+      name="keywords"
+      content="indumentaria, moda, outfit, urbano, vestimenta, ropa de hombre, oversize"
+    />
+    <title>CAYETANO - Productos</title>
+    <link rel="stylesheet" href="../css/styles.css" />
 
-<head>
-  <meta charset="iso-8559-1" />
-  <meta name="description" content="CAYETANO" />
-  <meta name="keywords" content="indumentaria, moda, outfit, urbano, vestimenta, ropa de hombre, oversize" />
-  <title>CAYETANO - Productos</title>
-  <link rel="stylesheet" href="../css/estilo-productos.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+  </head>
 
-</head>
+  <body>
+    <header id="encabezado">
+      <h1>CAYETANO</h1>
+    </header>
 
-<body>
-  <header id="encabezado">
-    <h1>CAYETANO</h1>
-  </header>
+    <nav id="navegacion-principal">
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="./productos.html">Productos</a></li>
+        <li><a href="./preguntas.html">Preguntas</a></li>
+        <li><a href="./cambios.html">Cambios</a></li>
+        <li><a href="./contacto.html">Contactos</a></li>
+      </ul>
+    </nav>
 
-  <nav id="navegacion-principal">
-    <ul>
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="./productos.html">Productos</a></li>
-      <li><a href="./preguntas.html">Preguntas</a></li>
-      <li><a href="./cambios.html">Cambios</a></li>
-      <li><a href="./contacto.html">Contactos</a></li>
-    </ul>
-  </nav>
+    <section id="contenido-productos">
+      <h2>PRODUCTOS</h2>
+      <div class="fila-productos">
+        <figure>
+          <img src="../resources/foto1.jpeg" alt="Producto 1" />
+          <figcaption>REME SUPPLY</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/foto2.jpeg" alt="Producto 2" />
+          <figcaption>REME MALIBU</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/foto3.jpeg" alt="Producto 3" />
+          <figcaption>REME OCEAN</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/foto4.jpeg" alt="Producto 4" />
+          <figcaption>REME SURF FACES</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+      </div>
+      <div class="fila-productos">
+        <figure>
+          <img src="../resources/img-buzo-homies.jpeg" alt="Producto 5" />
+          <figcaption>BUZO HOMIES</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/img-buzo-newworld.jpeg" alt="Producto 6" />
+          <figcaption>BUZO NEW WORLD</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/img-buzo-wonder.jpeg" alt="Producto 7" />
+          <figcaption>BUZO WONDER</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/img-buzo-azul.jpeg" alt="Producto 8" />
+          <figcaption>BUZO AZUL</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+      </div>
+      <div class="fila-productos">
+        <figure>
+          <img src="../resources/img-pufer-azul.jpeg" alt="Producto 5" />
+          <figcaption>PUFER AZUL</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/img-pufer-marron3.jpeg" alt="Producto 6" />
+          <figcaption>PUFER MARRON</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/img-pufer-violeta1.jpeg" alt="Producto 7" />
+          <figcaption>PUFER VIOLETA</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+        <figure>
+          <img src="../resources/img-pufer-roja.jpeg" alt="Producto 8" />
+          <figcaption>PUFER ROJA</figcaption>
+          <button class="boton-comprar">Comprar</button>
+        </figure>
+      </div>
+    </section>
 
-  <section id="contenido-productos">
-    <h2>PRODUCTOS</h2>
-    <div class="fila-productos">
-      <figure>
-        <img src="../resources/foto1.jpeg" alt="Producto 1" />
-        <figcaption>REME SUPPLY</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/foto2.jpeg" alt="Producto 2" />
-        <figcaption>REME MALIBU</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/foto3.jpeg" alt="Producto 3" />
-        <figcaption>REME OCEAN</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/foto4.jpeg" alt="Producto 4" />
-        <figcaption>REME SURF FACES</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-    </div>
-    <div class="fila-productos">
-      <figure>
-        <img src="../resources/img-buzo-homies.jpeg" alt="Producto 5" />
-        <figcaption>BUZO HOMIES</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/img-buzo-newworld.jpeg" alt="Producto 6" />
-        <figcaption>BUZO NEW WORLD</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/img-buzo-wonder.jpeg" alt="Producto 7" />
-        <figcaption>BUZO WONDER</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/img-buzo-azul.jpeg" alt="Producto 8" />
-        <figcaption>BUZO AZUL</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-    </div>
-    <div class="fila-productos">
-      <figure>
-        <img src="../resources/img-pufer-azul.jpeg" alt="Producto 5" />
-        <figcaption>PUFER AZUL</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/img-pufer-marron3.jpeg" alt="Producto 6" />
-        <figcaption>PUFER MARRON</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/img-pufer-violeta1.jpeg" alt="Producto 7" />
-        <figcaption>PUFER VIOLETA</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-      <figure>
-        <img src="../resources/img-pufer-roja.jpeg" alt="Producto 8" />
-        <figcaption>PUFER ROJA</figcaption>
-        <button class="boton-comprar">Comprar</button>
-
-      </figure>
-    </div>
-  </section>
-
-  <footer id="pie-de-pagina">
-    <h2>TU OUTFIT MAS CANCHERO</h2>
-    <div class="redes-sociales">
-      <a href="https://www.instagram.com/cayetano.okk" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="mailto: holacayetano@gmail.com"><i class="far fa-envelope"></i></a>
-      <a href="https://wa.me/5492216063880" target="_blank"><i class="fab fa-whatsapp"></i></a>
-    </div>
-  </footer>
-</body>
-
+    <footer id="pie-de-pagina">
+      <h2>TU OUTFIT MAS CANCHERO</h2>
+      <div class="redes-sociales">
+        <a href="https://www.instagram.com/cayetano.okk" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="mailto: holacayetano@gmail.com"
+          ><i class="far fa-envelope"></i
+        ></a>
+        <a href="https://wa.me/5492216063880" target="_blank"
+          ><i class="fab fa-whatsapp"></i
+        ></a>
+      </div>
+    </footer>
+  </body>
 </html>
