--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="iso-8559-1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="pagina de enseñanza html 5" />
     <meta name="keywords" content="html 5, css3, javascript, diseño web" />
     <title>CAYETANO</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
@@ -12,66 +17,165 @@
     />
   </head>
   <body>
-    <header id="encabezado">
-      <h1>CAYETANO</h1>
-      <nav id="navegacion-principal">
-        <ul>
-          <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./pages/productos.html">Productos</a></li>
-          <li><a href="./pages/preguntas.html">Preguntas</a></li>
-          <li><a href="./pages/cambios.html">Cambios</a></li>
-          <li><a href="./pages/contacto.html">Contactos</a></li>
-        </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand mx-auto" href="#">
+            <h1 class="mb-0">CAYETANO</h1>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/preguntas.html">Preguntas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/cambios.html">Cambios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">Contactos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
-    <main id="contenido-principal">
-      <div class="contenedor-imagen-principal">
-        <figure>
-          <img src="./resources/img-pufer-roja.jpeg" alt="Imagen principal" />
-        </figure>
-      </div>
-      <div class="contenedor-imagenes-adicionales">
-        <figure>
-          <img
-            src="./resources/img-pufer-roja1.jpeg"
-            alt="Imagen adicional 1"
-          />
-        </figure>
-        <figure>
-          <img
-            src="./resources/img-pufer-roja2.jpeg"
-            alt="Imagen adicional 2"
-          />
-        </figure>
-        <figure>
-          <img
-            src="./resources/img-pufer-roja3.jpeg"
-            alt="Imagen adicional 3"
-          />
-        </figure>
-        <figure>
-          <img
-            src="./resources/img-pufer-roja4.jpeg"
-            alt="Imagen adicional 4"
-          />
-        </figure>
+    <main id="contenido-principal" class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="./resources/img-pufer-roja1.jpeg"
+                  class="d-block w-100 carousel-image"
+                  alt="Imagen adicional 1"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./resources/img-pufer-roja2.jpeg"
+                  class="d-block w-100 carousel-image"
+                  alt="Imagen adicional 2"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./resources/img-pufer-roja3.jpeg"
+                  class="d-block w-100 carousel-image"
+                  alt="Imagen adicional 3"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./resources/img-pufer-roja4.jpeg"
+                  class="d-block w-100 carousel-image"
+                  alt="Imagen adicional 4"
+                />
+              </div>
+            </div>
+            <div class="carousel-indicators custom-carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              >
+                <img
+                  src="./resources/img-pufer-roja1.jpeg"
+                  class="d-block w-100"
+                  alt="Thumbnail 1"
+                />
+              </button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              >
+                <img
+                  src="./resources/img-pufer-roja2.jpeg"
+                  class="d-block w-100"
+                  alt="Thumbnail 2"
+                />
+              </button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              >
+                <img
+                  src="./resources/img-pufer-roja3.jpeg"
+                  class="d-block w-100"
+                  alt="Thumbnail 3"
+                />
+              </button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"
+              >
+                <img
+                  src="./resources/img-pufer-roja4.jpeg"
+                  class="d-block w-100"
+                  alt="Thumbnail 4"
+                />
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
-    <footer id="pie-de-pagina">
-      <h2>TU OUTFIT MAS CANCHERO</h2>
-      <div class="redes-sociales">
-        <a href="https://www.instagram.com/cayetano.okk" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="mailto: holacayetano@gmail.com"
-          ><i class="far fa-envelope"></i
-        ></a>
-        <a href="https://wa.me/5492216063880" target="_blank"
-          ><i class="fab fa-whatsapp"></i
-        ></a>
+    <footer id="pie-de-pagina" class="bg-dark text-light py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>TU OUTFIT MAS CANCHERO</h2>
+            <div class="redes-sociales">
+              <a href="https://www.instagram.com/cayetano.okk" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="mailto: holacayetano@gmail.com"
+                ><i class="far fa-envelope"></i
+              ></a>
+              <a href="https://wa.me/5492216063880" target="_blank"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
