--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,12 +2,17 @@
 <html lang="es">
   <head>
     <meta charset="iso-8559-1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Contacto de CAYETANO" />
     <meta
       name="keywords"
       content="contacto, formulario, CAYETANO, tienda, online"
     />
     <title>CAYETANO - Contacto</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <link
       rel="stylesheet"
@@ -15,59 +20,117 @@
     />
   </head>
   <body>
-    <header id="encabezado">
-      <h1>CAYETANO</h1>
-      <nav id="navegacion-principal">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./productos.html">Productos</a></li>
-          <li><a href="./preguntas.html">Preguntas</a></li>
-          <li><a href="./cambios.html">Cambios</a></li>
-          <li><a href="./contacto.html">Contactos</a></li>
-        </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="#">CAYETANO</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./preguntas.html">Preguntas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./cambios.html">Cambios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./contacto.html">Contactos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
-    <main id="contenido-principal">
-      <h2>CONTACTO</h2>
+    <main id="contenido-principal" class="container">
+      <h2 class="text-center mt-4">CONTACTO</h2>
       <div class="formulario-contacto">
         <form>
           <div class="campo-formulario">
-            <label for="nombre">NOMBRE *</label>
-            <input type="text" id="nombre" name="nombre" required />
+            <label for="nombre" class="form-label">NOMBRE *</label>
+            <input
+              type="text"
+              id="nombre"
+              name="nombre"
+              class="form-control"
+              required
+            />
           </div>
           <div class="campo-formulario">
-            <label for="email">CORREO ELECTRÓNICO *</label>
-            <input type="email" id="email" name="email" required />
+            <label for="email" class="form-label">CORREO ELECTRÓNICO *</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="form-control"
+              required
+            />
           </div>
           <div class="campo-formulario">
-            <label for="telefono">NÚMERO DE TELÉFONO *</label>
-            <input type="tel" id="telefono" name="telefono" required />
+            <label for="telefono" class="form-label"
+              >NÚMERO DE TELÉFONO *</label
+            >
+            <input
+              type="tel"
+              id="telefono"
+              name="telefono"
+              class="form-control"
+              required
+            />
           </div>
           <div class="campo-formulario">
-            <label for="mensaje">MENSAJE *</label>
-            <textarea id="mensaje" name="mensaje" required></textarea>
+            <label for="mensaje" class="form-label">MENSAJE *</label>
+            <textarea
+              id="mensaje"
+              name="mensaje"
+              class="form-control"
+              required
+            ></textarea>
           </div>
           <div class="boton-formulario">
-            <button type="submit">ENVIAR</button>
+            <button type="submit" class="btn btn-primary">ENVIAR</button>
           </div>
         </form>
       </div>
     </main>
 
-    <footer id="pie-de-pagina">
-      <h2>GRACIAS POR DEJARNOS TU MENSAJE</h2>
-      <div class="redes-sociales">
-        <a href="https://www.instagram.com/cayetano.okk" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="mailto: holacayetano@gmail.com"
-          ><i class="far fa-envelope"></i
-        ></a>
-        <a href="https://wa.me/5492216063880" target="_blank"
-          ><i class="fab fa-whatsapp"></i
-        ></a>
+    <footer id="pie-de-pagina" class="bg-dark text-light py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>GRACIAS POR DEJARNOS TU MENSAJE</h2>
+            <div class="redes-sociales">
+              <a href="https://www.instagram.com/cayetano.okk" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="mailto: holacayetano@gmail.com"
+                ><i class="far fa-envelope"></i
+              ></a>
+              <a href="https://wa.me/5492216063880" target="_blank"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
