--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2,14 +2,18 @@
 <html lang="es">
   <head>
     <meta charset="iso-8559-1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="CAYETANO" />
     <meta
       name="keywords"
       content="indumentaria, moda, outfit, urbano, vestimenta, ropa de hombre, oversize"
     />
     <title>CAYETANO - Productos</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -17,103 +21,327 @@
   </head>
 
   <body>
-    <header id="encabezado">
-      <h1>CAYETANO</h1>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand mx-auto" href="#">
+            <h1 class="mb-0">CAYETANO</h1>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./preguntas.html">Preguntas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./cambios.html">Cambios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contactos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
-    <nav id="navegacion-principal">
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="./productos.html">Productos</a></li>
-        <li><a href="./preguntas.html">Preguntas</a></li>
-        <li><a href="./cambios.html">Cambios</a></li>
-        <li><a href="./contacto.html">Contactos</a></li>
-      </ul>
-    </nav>
-
-    <section id="contenido-productos">
-      <h2>PRODUCTOS</h2>
-      <div class="fila-productos">
-        <figure>
-          <img src="../resources/foto1.jpeg" alt="Producto 1" />
-          <figcaption>REME SUPPLY</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/foto2.jpeg" alt="Producto 2" />
-          <figcaption>REME MALIBU</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/foto3.jpeg" alt="Producto 3" />
-          <figcaption>REME OCEAN</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/foto4.jpeg" alt="Producto 4" />
-          <figcaption>REME SURF FACES</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
+    <section id="contenido-productos" class="container">
+      <h2 class="text-center mt-4">PRODUCTOS</h2>
+      <div class="row fila-productos">
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/foto1.jpeg"
+              alt="Producto 1"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal1"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>REME SUPPLY</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/foto2.jpeg"
+              alt="Producto 2"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal2"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>REME MALIBU</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/foto3.jpeg"
+              alt="Producto 3"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal3"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>REME OCEAN</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/foto4.jpeg"
+              alt="Producto 4"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal4"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>REME SURF FACES</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="fila-productos">
-        <figure>
-          <img src="../resources/img-buzo-homies.jpeg" alt="Producto 5" />
-          <figcaption>BUZO HOMIES</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/img-buzo-newworld.jpeg" alt="Producto 6" />
-          <figcaption>BUZO NEW WORLD</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/img-buzo-wonder.jpeg" alt="Producto 7" />
-          <figcaption>BUZO WONDER</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/img-buzo-azul.jpeg" alt="Producto 8" />
-          <figcaption>BUZO AZUL</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
+      <div class="row fila-productos">
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-buzo-homies.jpeg"
+              alt="Producto 5"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal5"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>BUZO HOMIES</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-buzo-newworld.jpeg"
+              alt="Producto 6"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal6"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>BUZO NEW WORLD</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-buzo-wonder.jpeg"
+              alt="Producto 7"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal7"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>BUZO WONDER</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-buzo-azul.jpeg"
+              alt="Producto 8"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal8"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>BUZO AZUL</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="fila-productos">
-        <figure>
-          <img src="../resources/img-pufer-azul.jpeg" alt="Producto 5" />
-          <figcaption>PUFER AZUL</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/img-pufer-marron3.jpeg" alt="Producto 6" />
-          <figcaption>PUFER MARRON</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/img-pufer-violeta1.jpeg" alt="Producto 7" />
-          <figcaption>PUFER VIOLETA</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
-        <figure>
-          <img src="../resources/img-pufer-roja.jpeg" alt="Producto 8" />
-          <figcaption>PUFER ROJA</figcaption>
-          <button class="boton-comprar">Comprar</button>
-        </figure>
+      <div class="row fila-productos">
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-pufer-azul.jpeg"
+              alt="Producto 9"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal9"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>PUFER AZUL</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-pufer-marron3.jpeg"
+              alt="Producto 10"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal10"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>PUFER MARRON</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-pufer-violeta1.jpeg"
+              alt="Producto 11"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal11"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>PUFER VIOLETA</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="producto">
+            <img
+              src="../resources/img-pufer-roja.jpeg"
+              alt="Producto 12"
+              class="img-fluid producto-imagen"
+              data-bs-toggle="modal"
+              data-bs-target="#productoModal12"
+            />
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>PUFER ROJA</h3>
+                <button class="btn btn-comprar boton-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <footer id="pie-de-pagina">
-      <h2>TU OUTFIT MAS CANCHERO</h2>
-      <div class="redes-sociales">
-        <a href="https://www.instagram.com/cayetano.okk" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="mailto: holacayetano@gmail.com"
-          ><i class="far fa-envelope"></i
-        ></a>
-        <a href="https://wa.me/5492216063880" target="_blank"
-          ><i class="fab fa-whatsapp"></i
-        ></a>
+    <!-- Modal para cada producto -->
+    <div
+      class="modal fade"
+      id="productoModal1"
+      tabindex="-1"
+      aria-labelledby="productoModal1Label"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img
+              src="../resources/foto1.jpeg"
+              alt="Producto 1"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="productoModal2"
+      tabindex="-1"
+      aria-labelledby="productoModal2Label"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img
+              src="../resources/foto2.jpeg"
+              alt="Producto 2"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Agrega los modales para los demás productos -->
+
+    <footer id="pie-de-pagina" class="bg-dark text-light py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>TU OUTFIT MAS CANCHERO</h2>
+            <div class="redes-sociales">
+              <a href="https://www.instagram.com/cayetano.okk" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="mailto: holacayetano@gmail.com"
+                ><i class="far fa-envelope"></i
+              ></a>
+              <a href="https://wa.me/5492216063880" target="_blank"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
