--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="preguntas, frecuentes, CAYETANO, tienda, online" />
     <title>CAYETANO - Preguntas Frecuentes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../scss/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
   <body>
