Arreglos de SASS y agregado de SEO

--- a/pages/cambios.html
+++ b/pages/cambios.html
@@ -2,19 +2,13 @@
 <html lang="es">
   <head>
     <meta charset="iso-8559-1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Cambios en CAYETANO" />
-    <meta
-      name="keywords"
-      content="cambios, devoluciones, CAYETANO, tienda, online"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Información sobre cambios y devoluciones en CAYETANO. Conoce nuestras políticas y procedimientos para gestionar cambios de productos." />
+    <meta name="keywords" content="cambios, devoluciones, CAYETANO, tienda online, políticas de cambio" />
     <title>CAYETANO - Cambios</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../scss/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   </head>
   <body>
     <header>
@@ -39,7 +33,7 @@
                 <a class="nav-link active" href="./cambios.html">Cambios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contactos</a>
+                <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -48,62 +42,27 @@
     </header>
 
     <main id="contenido-principal" class="container">
-      <h2 class="text-center mt-4">CAMBIOS</h2>
+      <h1 class="text-center mt-4">Cambios</h1>
       <div class="contenido-cambios">
         <div class="imagen-cambios">
-          <img
-            src="../resources/img-pufer-marron3.jpeg"
-            alt="Imagen de cambios"
-            class="img-fluid"
-          />
+          <img src="../resources/img-pufer-marron3.jpeg" alt="Imagen de cambios" class="img-fluid" />
         </div>
         <div class="texto-cambios">
-          <p>
-            <strong>
-              <h2>¿CÓMO GESTIONO UN CAMBIO/DEVOLUCIÓN?</h2> </strong
-            ><br />
-            Para solicitar un cambio o devolución deberán contactarse con
-            nosotros a nuestra casilla de holacayetano@gmail.com. O comunícate
-            al WhatsApp. Nuestro horario de atención es de Lunes a Sábados de
-            9:00 a 18:00 hs.
-          </p>
-          <p>Envianos un mensaje vía WhatsApp detallando:</p>
+          <h2>¿Cómo gestiono un cambio?</h2>
+          <p>Para solicitar un cambio o devolución, deberás contactarnos a nuestra casilla de <a href="mailto:holacayetano@gmail.com">holacayetano@gmail.com</a> o comunicarte al WhatsApp. Nuestro horario de atención es de Lunes a Sábados de 9:00 a 18:00 hs.</p>
+          <p>Envíanos un mensaje vía WhatsApp detallando:</p>
           <ul>
             <li>Número de orden (recibido al momento de realizar la compra)</li>
             <li>Modelo y talle de la nueva prenda que desees obtener</li>
-            <li>
-              Método de cambio que desees: "cambio presencial en punto de
-              retiro" o "envío a domicilio" (Consultar costo adicional por zona)
-            </li>
+            <li>Método de cambio que desees: "cambio presencial en punto de retiro" o "envío a domicilio" (Consultar costo adicional por zona)</li>
           </ul>
-          <p>
-            En nuestro horario de atención te responderemos para coordinar el
-            cambio.
-          </p>
-          <h2>¿CUÁNTOS DÍAS DE CAMBIO TIENEN LAS PRENDAS?</h2>
-          <p>
-            Todas las prendas que compres en nuestra tienda contarán con 30 días
-            de cambio (desde el momento en que recibas tu pedido hasta el
-            momento en que nosotros recibamos la devolución de la prenda que
-            desees cambiar). No se podrán superar los 30 días de corrido, por lo
-            que te aconsejamos solicitar el cambio dentro de los primeros 10
-            días.
-          </p>
-          <h2>¿QUÉ OPCIONES DE CAMBIO TENGO?</h2>
-          <p>
-            Podrás realizar los cambios por talle, color o modelo en base al
-            stock físico disponible al momento de interactuar vía WhatsApp con
-            nosotros. La prenda que elijas deberá ser de la misma temporada que
-            la compra inicial. En el caso de elegir una prenda con un valor
-            mayor, podes abonar la diferencia.
-          </p>
-          <h2>¿EN QUÉ CONDICIONES PUEDO CAMBIAR UNA PRENDA?</h2>
-          <p>
-            Todas nuestras prendas reciben un control de calidad previamente a
-            ser entregadas, por lo que al momento de efectuar un cambio deberán
-            conservarse en perfectas condiciones y con su respectiva etiqueta y
-            bolsa.
-          </p>
+          <p>En nuestro horario de atención te responderemos para coordinar el cambio.</p>
+          <h2>¿Cuántos días de cambio tienen las prendas?</h2>
+          <p>Todas las prendas que compres en nuestra tienda contarán con 30 días de cambio (desde el momento en que recibas tu pedido hasta el momento en que nosotros recibamos la devolución de la prenda que desees cambiar). No se podrán superar los 30 días de corrido, por lo que te aconsejamos solicitar el cambio dentro de los primeros 10 días.</p>
+          <h2>¿Qué opciones de cambio tengo?</h2>
+          <p>Podrás realizar los cambios por talle, color o modelo en base al stock físico disponible al momento de interactuar vía WhatsApp con nosotros. La prenda que elijas deberá ser de la misma temporada que la compra inicial. En el caso de elegir una prenda con un valor mayor, puedes abonar la diferencia.</p>
+          <h2>¿En qué condiciones puedo cambiar una prenda?</h2>
+          <p>Todas nuestras prendas reciben un control de calidad previamente a ser entregadas, por lo que al momento de efectuar un cambio deberán conservarse en perfectas condiciones y con su respectiva etiqueta y bolsa.</p>
         </div>
       </div>
     </main>
@@ -112,17 +71,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>TU OUTFIT MAS CANCHERO</h2>
+            <h2>Tu outfit más canchero</h2>
             <div class="redes-sociales">
-              <a href="https://www.instagram.com/cayetano.okk" target="_blank"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a href="mailto: holacayetano@gmail.com"
-                ><i class="far fa-envelope"></i
-              ></a>
-              <a href="https://wa.me/5492216063880" target="_blank"
-                ><i class="fab fa-whatsapp"></i
-              ></a>
+              <a href="https://www.instagram.com/cayetano.okk" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+              <a href="mailto:holacayetano@gmail.com"><i class="far fa-envelope"></i></a>
+              <a href="https://wa.me/5492216063880" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
             </div>
           </div>
         </div>
@@ -131,4 +84,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
-</
+</html>
