--- a/index.html
+++ b/index.html
@@ -3,32 +3,18 @@
   <head>
     <meta charset="iso-8559-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="pagina de enseñanza html 5" />
-    <meta name="keywords" content="html 5, css3, javascript, diseño web" />
-    <title>CAYETANO</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
+    <meta name="description" content="CAYETANO - Tienda de ropa urbana y moderna. Encontrá los mejores outfits para tu estilo." />
+    <meta name="keywords" content="CAYETANO, ropa urbana, moda, outfits, estilo" />
+    <title>CAYETANO - Tu Outfit Más Canchero</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="navbar-brand mx-auto text-center">
@@ -40,20 +26,16 @@
                   <a class="nav-link active" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/productos.html"
-                    >Productos</a
-                  >
+                  <a class="nav-link" href="./pages/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/preguntas.html"
-                    >Preguntas</a
-                  >
+                  <a class="nav-link" href="./pages/preguntas.html">Preguntas</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./pages/cambios.html">Cambios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/contacto.html">Contactos</a>
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -65,91 +47,33 @@
     <main id="contenido-principal" class="container">
       <div class="row">
         <div class="col-md-12">
-          <div
-            id="carouselExampleIndicators"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img
-                  src="./resources/img-pufer-roja1.jpeg"
-                  class="d-block w-100 carousel-image"
-                  alt="Imagen adicional 1"
-                />
+                <img src="./resources/img-pufer-roja1.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 1" />
               </div>
               <div class="carousel-item">
-                <img
-                  src="./resources/img-pufer-roja2.jpeg"
-                  class="d-block w-100 carousel-image"
-                  alt="Imagen adicional 2"
-                />
+                <img src="./resources/img-pufer-roja2.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 2" />
               </div>
               <div class="carousel-item">
-                <img
-                  src="./resources/img-pufer-roja3.jpeg"
-                  class="d-block w-100 carousel-image"
-                  alt="Imagen adicional 3"
-                />
+                <img src="./resources/img-pufer-roja3.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 3" />
               </div>
               <div class="carousel-item">
-                <img
-                  src="./resources/img-pufer-roja4.jpeg"
-                  class="d-block w-100 carousel-image"
-                  alt="Imagen adicional 4"
-                />
+                <img src="./resources/img-pufer-roja4.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 4" />
               </div>
             </div>
             <div class="carousel-indicators custom-carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              >
-                <img
-                  src="./resources/img-pufer-roja1.jpeg"
-                  class="d-block w-100"
-                  alt="Thumbnail 1"
-                />
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
+                <img src="./resources/img-pufer-roja1.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 1" />
               </button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              >
-                <img
-                  src="./resources/img-pufer-roja2.jpeg"
-                  class="d-block w-100"
-                  alt="Thumbnail 2"
-                />
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2">
+                <img src="./resources/img-pufer-roja2.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 2" />
               </button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="2"
-                aria-label="Slide 3"
-              >
-                <img
-                  src="./resources/img-pufer-roja3.jpeg"
-                  class="d-block w-100"
-                  alt="Thumbnail 3"
-                />
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3">
+                <img src="./resources/img-pufer-roja3.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 3" />
               </button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="3"
-                aria-label="Slide 4"
-              >
-                <img
-                  src="./resources/img-pufer-roja4.jpeg"
-                  class="d-block w-100"
-                  alt="Thumbnail 4"
-                />
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4">
+                <img src="./resources/img-pufer-roja4.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 4" />
               </button>
             </div>
           </div>
@@ -163,15 +87,9 @@
           <div class="col-md-12 text-center">
             <h2>TU OUTFIT MAS CANCHERO</h2>
             <div class="redes-sociales">
-              <a href="https://www.instagram.com/cayetano.okk" target="_blank"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a href="mailto: holacayetano@gmail.com"
-                ><i class="far fa-envelope"></i
-              ></a>
-              <a href="https://wa.me/5492216063880" target="_blank"
-                ><i class="fab fa-whatsapp"></i
-              ></a>
+              <a href="https://www.instagram.com/cayetano.okk" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+              <a href="mailto:holacayetano@gmail.com"><i class="far fa-envelope"></i></a>
+              <a href="https://wa.me/5492216063880" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
             </div>
           </div>
         </div>
