--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,36 +3,19 @@
   <head>
     <meta charset="iso-8559-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Contacto de CAYETANO" />
-    <meta
-      name="keywords"
-      content="contacto, formulario, CAYETANO, tienda, online"
-    />
+    <meta name="description" content="Contáctanos en CAYETANO para hacer consultas, sugerencias o solicitar información adicional. Estamos aquí para ayudarte." />
+    <meta name="keywords" content="contacto, formulario, CAYETANO, tienda online, consultas, sugerencias" />
     <title>CAYETANO - Contacto</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="../scss/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="#">CAYETANO</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,7 +33,7 @@
                 <a class="nav-link" href="./cambios.html">Cambios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="./contacto.html">Contactos</a>
+                <a class="nav-link active" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -59,52 +42,27 @@
     </header>
 
     <main id="contenido-principal" class="container">
-      <h2 class="text-center mt-4">CONTACTO</h2>
+      <h1 class="text-center mt-4">Contacto</h1>
       <div class="formulario-contacto">
         <form>
           <div class="campo-formulario">
-            <label for="nombre" class="form-label">NOMBRE *</label>
-            <input
-              type="text"
-              id="nombre"
-              name="nombre"
-              class="form-control"
-              required
-            />
+            <label for="nombre" class="form-label">Nombre *</label>
+            <input type="text" id="nombre" name="nombre" class="form-control" required />
           </div>
           <div class="campo-formulario">
-            <label for="email" class="form-label">CORREO ELECTRÓNICO *</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              class="form-control"
-              required
-            />
+            <label for="email" class="form-label">Correo Electrónico *</label>
+            <input type="email" id="email" name="email" class="form-control" required />
           </div>
           <div class="campo-formulario">
-            <label for="telefono" class="form-label"
-              >NÚMERO DE TELÉFONO *</label
-            >
-            <input
-              type="tel"
-              id="telefono"
-              name="telefono"
-              class="form-control"
-              required
-            />
+            <label for="telefono" class="form-label">Número de Teléfono *</label>
+            <input type="tel" id="telefono" name="telefono" class="form-control" required />
           </div>
           <div class="campo-formulario">
-            <label for="mensaje" class="form-label">MENSAJE *</label>
-            <textarea
-              id="mensaje"
-              name="mensaje"
-              class="form-control"
-              required
-            ></textarea>
+            <label for="mensaje" class="form-label">Mensaje *</label>
+            <textarea id="mensaje" name="mensaje" class="form-control" required></textarea>
           </div>
           <div class="boton-formulario">
-            <button type="submit" class="btn btn-primary">ENVIAR</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </div>
         </form>
       </div>
@@ -114,17 +72,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>GRACIAS POR DEJARNOS TU MENSAJE</h2>
+            <h2>Gracias por dejarnos tu mensaje</h2>
             <div class="redes-sociales">
-              <a href="https://www.instagram.com/cayetano.okk" target="_blank"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a href="mailto: holacayetano@gmail.com"
-                ><i class="far fa-envelope"></i
-              ></a>
-              <a href="https://wa.me/5492216063880" target="_blank"
-                ><i class="fab fa-whatsapp"></i
-              ></a>
+              <a href="https://www.instagram.com/cayetano.okk" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+              <a href="mailto:holacayetano@gmail.com"><i class="far fa-envelope"></i></a>
+              <a href="https://wa.me/5492216063880" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
             </div>
           </div>
         </div>
