arreglos estilo varios

--- a/index.html
+++ b/index.html
@@ -46,45 +46,45 @@
 
     <main id="contenido-principal">
       <section id="bienvenida" class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <p>¡Hola! Bienvenido a CAYETANO, tu tienda online de ropa urbana y moderna. Aquí encontrarás los outfits más cancheros para lucir tu estilo único en las calles.</p>
-            <p>En CAYETANO, nos encanta estar a la moda y queremos compartir esa pasión contigo. Desde looks casuales hasta elegantes, tenemos todo lo que necesitas para destacar con tu outfit.</p>
-            <p>¡Sumérgete en el mundo de CAYETANO y déjate llevar por nuestro estilo! ¡Gracias por elegirnos como tu destino de moda urbana!</p>
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <h3>¡Hola CAYETANOS!</h3>
+            <p>somos una marca que aporta, que incluye.</p>
+            <p>LA MODA ES ACTITUD, EL RESTO ES ROPA</p>
+            <a href="./pages/productos.html" class="btn btn-outline-light">VESTITE</a>
           </div>
         </div>
       </section>
-
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./resources/img-pufer-roja1.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 1" />
+                  <img src="./assets/images/img-pufer-roja1.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 1" />
                 </div>
                 <div class="carousel-item">
-                  <img src="./resources/img-pufer-roja2.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 2" />
+                  <img src="./assets/images/img-pufer-roja2.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 2" />
                 </div>
                 <div class="carousel-item">
-                  <img src="./resources/img-pufer-roja3.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 3" />
+                  <img src="./assets/images/img-pufer-roja3.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 3" />
                 </div>
                 <div class="carousel-item">
-                  <img src="./resources/img-pufer-roja4.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 4" />
+                  <img src="./assets/images/img-pufer-roja4.jpeg" class="d-block w-100 carousel-image" alt="Pufer roja - Imagen 4" />
                 </div>
               </div>
               <div class="carousel-indicators custom-carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
-                  <img src="./resources/img-pufer-roja1.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 1" />
+                  <img src="./assets/images/img-pufer-roja1.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 1" />
                 </button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2">
-                  <img src="./resources/img-pufer-roja2.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 2" />
+                  <img src="./assets/images/img-pufer-roja2.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 2" />
                 </button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3">
-                  <img src="./resources/img-pufer-roja3.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 3" />
+                  <img src="./assets/images/img-pufer-roja3.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 3" />
                 </button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4">
-                  <img src="./resources/img-pufer-roja4.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 4" />
+                  <img src="./assets/images/img-pufer-roja4.jpeg" class="d-block w-100" alt="Pufer roja - Thumbnail 4" />
                 </button>
               </div>
             </div>
