--- a/pages/productos.html
+++ b/pages/productos.html
@@ -51,7 +51,7 @@
         <div class="row fila-productos">
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/foto1.jpeg" alt="Remera Supply" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal1" />
+              <img src="../assets/images/foto1.jpeg" alt="Remera Supply" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal1" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>REME SUPPLY</h3>
@@ -62,7 +62,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/foto2.jpeg" alt="Remera Malibu" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal2" />
+              <img src="../assets/images/foto2.jpeg" alt="Remera Malibu" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal2" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>REME MALIBU</h3>
@@ -73,7 +73,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/foto3.jpeg" alt="Remera Ocean" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal3" />
+              <img src="../assets/images/foto3.jpeg" alt="Remera Ocean" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal3" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>REME OCEAN</h3>
@@ -84,7 +84,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/foto4.jpeg" alt="Remera Surf Faces" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal4" />
+              <img src="../assets/images/foto4.jpeg" alt="Remera Surf Faces" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal4" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>REME SURF FACES</h3>
@@ -97,7 +97,7 @@
         <div class="row fila-productos">
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-buzo-homies.jpeg" alt="Buzo Homies" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal5" />
+              <img src="../assets/images/img-buzo-homies.jpeg" alt="Buzo Homies" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal5" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>BUZO HOMIES</h3>
@@ -108,7 +108,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-buzo-newworld.jpeg" alt="Buzo New World" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal6" />
+              <img src="../assets/images/img-buzo-newworld.jpeg" alt="Buzo New World" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal6" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>BUZO NEW WORLD</h3>
@@ -119,7 +119,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-buzo-wonder.jpeg" alt="Buzo Wonder" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal7" />
+              <img src="../assets/images/img-buzo-wonder.jpeg" alt="Buzo Wonder" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal7" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>BUZO WONDER</h3>
@@ -130,7 +130,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-buzo-azul.jpeg" alt="Buzo Azul" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal8" />
+              <img src="../assets/images/img-buzo-azul.jpeg" alt="Buzo Azul" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal8" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>BUZO AZUL</h3>
@@ -143,7 +143,7 @@
         <div class="row fila-productos">
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-pufer-azul.jpeg" alt="Puffer Azul" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal9" />
+              <img src="../assets/images/img-pufer-azul.jpeg" alt="Puffer Azul" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal9" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>PUFER AZUL</h3>
@@ -154,7 +154,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-pufer-marron3.jpeg" alt="Puffer Marrón" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal10" />
+              <img src="../assets/images//img-pufer-marron3.jpeg" alt="Puffer Marrón" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal10" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>PUFER MARRON</h3>
@@ -165,7 +165,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-pufer-violeta1.jpeg" alt="Puffer Violeta" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal11" />
+              <img src="../assets/images/img-pufer-violeta1.jpeg" alt="Puffer Violeta" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal11" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>PUFER VIOLETA</h3>
@@ -176,7 +176,7 @@
           </div>
           <div class="col-md-3">
             <div class="producto">
-              <img src="../resources/img-pufer-roja.jpeg" alt="Puffer Roja" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal12" />
+              <img src="../assets/images/img-pufer-roja.jpeg" alt="Puffer Roja" class="img-fluid producto-imagen" data-bs-toggle="modal" data-bs-target="#productoModal12" />
               <div class="overlay">
                 <div class="overlay-content text-center">
                   <h3>PUFER ROJA</h3>
@@ -194,7 +194,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-body">
-            <img src="../resources/foto1.jpeg" alt="Remera Supply" class="img-fluid" />
+            <img src="../assets/images/foto1.jpeg" alt="Remera Supply" class="img-fluid" />
           </div>
         </div>
       </div>
@@ -204,7 +204,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-body">
-            <img src="../resources/foto2.jpeg" alt="Remera Malibu" class="img-fluid" />
+            <img src="../assets/images/foto2.jpeg" alt="Remera Malibu" class="img-fluid" />
           </div>
         </div>
       </div>
